adding the plugin files

--- a/.gitignore
+++ b/.gitignore
@@ -1,9 +1,10 @@
 # Ignore everything
-*
+/*
 
 # But not these files...
 !.gitignore
 !.vimrc
+!.vim/
 
 # ...even if they are in subdirectories
 # !*/
